overflow hidden by stop-scrolling class

--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,10 @@ footer ul li a:hover
     z-index: 5;
 }
 
-
+.stop-scrolling
+{
+    overflow: hidden;
+}
 
 /* hamburger */
 .hamburger
